# sdl2-collision-events

./: .gitignore  CMakeLists.txt  README.md
assets/maps/: 1.area
sdl-collision-events-src/: CAnimation.cpp  CAnimation.h  CApp.cpp  CApp.h  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp  CArea.cpp  CArea.h  CCamera.cpp  CCamera.h  CEntity.cpp  CEntity.h  CEntityCol.cpp  CEvent.cpp  CEvent.h  CFPS.cpp  CFPS.h  CMap.cpp  CMap.h  CPlayer.cpp  CPlayer.h  CSurface.cpp  CSurface.h  CTile.cpp  CTile.h  Define.h
